# libbsml_V1

./: CMakeLists.txt  README.md  README.rst
curl/: bsml2edf.c  bsml_transfer.c  bsml_transfer.h
model/: annotation.h  bsml.h  build.sh  clock.cpp  datetime.cpp  datetime.h  event.h  object.cpp  object.h  rdf.cpp  rdf.h  rdfmap.h  rdfnames.h  recording.cpp  recording.h  segment.h  signal.cpp  signal.h  test.cpp  units.cpp  units.h  utility.h
src/: CMakeLists.txt  Doxyfile  Makefile  biosignalml-internal.c  biosignalml-internal.h  biosignalml.h  bsml-data.h  bsml-internal.h  bsml-recording.h  bsml-repository.h  bsml-signal.h  bsml-stream.h  bsml-utility.h  bsml_data.c  bsml_data.h  bsml_internal.c  bsml_internal.h  bsml_model.h  bsml_rdfgraph.c  bsml_rdfgraph.h  bsml_recording.c  bsml_recording.h  bsml_repository.c  bsml_repository.h  bsml_signal.c  bsml_signal.h  bsml_stream.c  bsml_stream.h  bsml_time.c  bsml_time.h  bsml_units.h  buildtest.sh  config.h  internal.c  rdf_graph.c  rdfgraph.c  recording.c  repository.c  websockets.c
src/api/: bsml_data.c  bsml_hdf5.c  bsml_hdf5.h  bsml_internal.c  bsml_internal.h  bsml_model.c  bsml_model.h  bsml_names.h  bsml_rdf.c  bsml_rdf.h  bsml_rdf_mapping.c  bsml_rdf_mapping.h  bsml_rdfnames.h  bsml_repo.c  bsml_repo.h  bsml_stream.c  bsml_stream.h  edf.ttl
src/hdf5/: .gitignore  CMakeLists.txt  bsml_h5.h  h5clock.cpp  h5clock.h  h5common.cpp  h5common.h  h5dataset.cpp  h5dataset.h  h5recording.cpp  h5recording.h  h5signal.cpp  h5signal.h  makelib.sh  test.cpp
src/model/: annotation.h  biosignalml.h  bsml.cpp  bsml.h  build.sh  clock.cpp  clock.h  datetime.cpp  datetime.h  event.h  object.cpp  object.h  recording.cpp  recording.h  segment.h  signal.cpp  signal.h  test.cpp  units.cpp  units.h
src/rdf/: rdf.cpp  rdf.h  rdfmap.h  rdfnames.cpp  rdfnames.h
src/ssf/: .gitignore  bsml.h  curl.c  dict.c  ssf.c  ssf.h  ssf.py  test.c
src/tests/: curl.c  print_json.c  print_json.h  websocket.c  websocket.py
src/utility/: bsml_dictionary.c  bsml_dictionary.h  bsml_json.c  bsml_json.h  bsml_log.c  bsml_log.h  bsml_queue.c  bsml_queue.h  bsml_string.c  bsml_string.h  dictionary.c  dictionary.h  list.c  list.h  scaler.c  uri_parse.c  uri_parse.h  utility.cpp  values.c  values.h
src/websockets/: test.c
